--- a/.env.examplee
+++ b/.env.examplee
@@ -1,9 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:1RBJpZdHjU44pVUfvkyXiOt5ew481AOUsN9enJx7d9s=
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost/kain
-ASSET_URL=http://localhost/kain/public
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
