--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Kain
 APP_ENV=local
 APP_KEY=base64:1RBJpZdHjU44pVUfvkyXiOt5ew481AOUsN9enJx7d9s=
 APP_DEBUG=true
@@ -12,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=kain
 DB_USERNAME=root
 DB_PASSWORD=
 
