tampil pembelian detail

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=Kain
 APP_ENV=local
 APP_KEY=base64:1RBJpZdHjU44pVUfvkyXiOt5ew481AOUsN9enJx7d9s=
 APP_DEBUG=true
-APP_URL=http://localhost/kain
-ASSET_URL=http://localhost/kain/public
+APP_URL=http://192.168.1.77//kain
+ASSET_URL=http://192.168.1.77//kain/public
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
